Render labels on Y axes
Signed-off-by: Oleg Bulatov <oleg@bulatov.mobi>

--- a/blocks/b-chart/b-chart.css
+++ b/blocks/b-chart/b-chart.css
@@ -15,23 +15,22 @@
 
 .b-chart__cell-middle-left
 {
-    background: #fcc;
     padding: 0;
     text-align: right;
+    vertical-align: top;
     width: 60px;
 }
 
 .b-chart__cell-middle
 {
-    background: #cfc;
     padding: 0;
 }
 
 .b-chart__cell-middle-right
 {
-    background: #ccf;
     padding: 0;
     text-align: left;
+    vertical-align: top;
     width: 60px;
 }
 
