--- a/blocks/b-axis/b-axis.css
+++ b/blocks/b-axis/b-axis.css
@@ -1,4 +1,57 @@
 .b-axis
 {
-    /* ... */
+    font: 70%/100% Arial,sans-serif;
+    overflow: hidden;
+    position: relative;
+}
+
+.b-axis__value
+{
+    position: absolute;
+}
+
+.b-axis__label
+{
+    position: absolute;
+}
+
+.b-axis__tick
+{
+    position: absolute;
+}
+
+.b-axis_pos_left .b-axis__value
+{
+    right: 0;
+}
+
+.b-axis_pos_left .b-axis__label
+{
+    right: 7px;
+    top: -0.5em;
+}
+
+.b-axis_pos_left .b-axis__tick
+{
+    border-top: 1px solid #000;
+    right: 0;
+    width: 5px;
+}
+
+.b-axis_pos_right .b-axis__value
+{
+    left: 0;
+}
+
+.b-axis_pos_right .b-axis__label
+{
+    left: 7px;
+    top: -0.5em;
+}
+
+.b-axis_pos_right .b-axis__tick
+{
+    border-top: 1px solid #000;
+    left: 0;
+    width: 5px;
 }
